<resources>
    <string name="app_name">WYNews</string>
    <string name="title_home">新闻</string>
    <string name="title_video">视频</string>
    <string name="title_settings">帐号</string>
    <string name="top_tab">健康</string>
    <string name="top_tab_1">足球</string>
    <string name="top_tab_2">科技</string>
    <string name="top_tab_3">产品</string>
    <string name="health">健康</string>
    <string name="football">足球</string>
    <string name="tech">科技</string>
    <string name="mobile">产品</string>
    <string name="health_url">"http://api.tianapi.com/health/?key=99045f5139f5f6be0de4946eb6bcc78b&#38;num=3&#38;rand=1"</string>
    <string name="football_url">"http://api.tianapi.com/football/?key=99045f5139f5f6be0de4946eb6bcc78b&#38;num=3&#38;rand=1"</string>
    <string name="tech_url">"http://api.tianapi.com/it/?key=99045f5139f5f6be0de4946eb6bcc78b&#38;num=3&#38;rand=1"</string>
    <string name="mobile_url">"http://api.tianapi.com/mobile/?key=99045f5139f5f6be0de4946eb6bcc78b&#38;num=3&#38;rand=1"</string>
    <string name="small_problem">发送了点小问题,稍后重试</string>
    <string name="not_support">播放器不支持此设备</string>
    <string name="video_title">"网站抓取的视频"</string>
    <string name="video_playurl">"http://ivi.bupt.edu.cn/hls/cctv6hd.m3u8"</string>
    <string name="video_title1">"网站抓取的视频"</string>
    <string name="video_playurl1">"http://ivi.bupt.edu.cn/hls/cctv8hd.m3u8"</string>
    <string name="video_title2">"本人搭建的服务器:直播_rtmp"</string>
    <string name="video_playurl2">"rtmp://192.168.1.172:1935/rtmp_hls"</string>
    <string name="video_title3">"本人搭建的服务器:点播_rtmp"</string>
    <string name="video_playurl3">"rtmp://182.254.231.136:1935/vod/make_cake.mp4"</string>
    <string name="video_title4">"本人的PC:点播_rtmp"</string>
    <string name="video_playurl4">"rtmp://192.168.1.172:1935/vod/make_cake.mp4"</string>
    <string name="video_title5">"本人的PC:"</string>
    <string name="video_playurl5">"http://ips.ifeng.com/video19.ifeng.com/video09/2016/07/25/34595&#8212;102&#8212;009&#8212;0533.mp4"</string>
    <string name="video_title6">"本人搭建的服务器:点播_rtmp"</string>
    <string name="video_playurl6">"rtmp://182.254.231.136:1935/vod/1.mp4"</string>
    <string name="video_title7">"本人搭建的服务器:点播_rtmp"</string>
    <string name="video_playurl7">"rtmp://182.254.231.136:1935/vod/2.mp4"</string>
    <string name="video_title8">"本人搭建的服务器:点播_rtmp"</string>
    <string name="video_playurl8">"rtmp://182.254.231.136:1935/vod/3.mp4"</string>
    <string name="nav_girls">Girls</string>
    <string name="height">height:</string>
    <string name="width">width:</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">发送验证码</string>
    <string name="send_request_message">登录</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member? Login</string>
    <string name="app_main_login">登录</string>
    <string name="app_main_qq_share">QQ分享</string>
    <string name="qqshare_imageUrl_content">http://inews.gtimg.com/newsapp_bt/0/876781763/1000</string>
    <string name="str_share_type">内容类型: </string>
    <string name="str_default_share">默认</string>
    <string name="str_audio_share">音乐分享</string>
    <string name="str_image_share">纯图分享</string>
    <string name="str_app_share">应用分享</string>
    <string name="str_image_text_share">分享</string>
    <string name="special_qzone_action">QQ空间: </string>
    <string name="default_qzone_dialog">Qzone弹窗</string>
    <string name="qzone_item_hide">Qzone隐藏</string>
    <string name="qqshare_title_hint">input title</string>
    <string name="qqshare_title_content">腾讯新闻分享标题</string>
    <string name="qqshare_summary_hint">input summary</string>
    <string name="qqshare_summary_content">新闻分享摘要内容,这里是QQ分享摘要测试, 字数不够? 再加点?</string>
    <string name="qqshare_audio_url_lable">audio url</string>
    <string name="qqshare_audioUrl_hint">input music url</string>
    <string name="qqshare_audioUrl_content">http://mr3.douban.com/201307291529/13a106d9b49a9a8446fd3c18f77dc395/view/song/small/p8508.mp3</string>
    <string name="qqshare_targetUrl_lable">targetUrl</string>
    <string name="qqshare_targetUrl_hint">input target url</string>
    <string name="qqshare_targetUrl_content">http://www.qq.com/</string>
    <string name="qqshare_imageUrl_hint">input image url</string>
    <string name="qqshare_appName_lable">app name</string>
    <string name="qqshare_ark_lable">ARK JSON串（选填）</string>
    <string name="qqshare_appName_hint">input app name</string>
    <string name="qqshare_appName_content">测试应用</string>
    <string name="qqshare_ark_content">	{"app":"com.tencent.music","view":"Share","meta":{"Share":{"musicId":"4893051"}}}</string>
    <string name="qzoneshare_title_content">空间分享测试</string>
    <string name="qzoneshare_summary_content">分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动</string>
    <string name="title">title:</string>
    <string name="title_hint">Input story title</string>
    <string name="summary">summary:</string>
    <string name="qqshare_imageUrl_lable">imageUrl</string>
    <string name="commit">Commit</string>
    <string name="str_image_net">网络图片</string>
    <string name="str_image_local">本地图片</string>
    <string name="publish_videoPath_lable">videoPath</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>
    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>
    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="send_pic">发送照片</string>
    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>
    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>
    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>
    <string name="send_appbrand">发送小程序</string>
    <string-array name="send_appbrand_item">
        <item>发送小程序</item>
    </string-array>
    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>
    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>
    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="scan_qrcode_login">扫码登录</string>
    <string name="auth">微信登录</string>
    <string name="cancel_auth">取消登录</string>
    <string name="qrcode_wait_for_scan">扫描二维码登录</string>
    <string name="qrcode_scanned">点击确认登录</string>
    <string name="result_succ" formatted="false">登录成功，code=%s</string>
    <string name="result_normal_err">登录失败，一般错误</string>
    <string name="result_network_err">登录失败，网络错误</string>
    <string name="result_json_decode_err">json解码失败</string>
    <string name="result_user_cancel">用户取消</string>
    <string name="result_timeout_err">登录失败，超时错误</string>
    <string name="target_scene">目标场景</string>
    <string name="target_scene_session">会话</string>
    <string name="target_scene_timeline">朋友圈</string>
    <string name="target_scene_favorite">收藏</string>
    <string name="btn_wx_login">微信登录</string>
    <string name="btn_token_qq">使用token信息登录,不拉起手Q</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>
    <string name="mystart_title">mystart</string>
    <string name="mystart_no_tasks">You have no tasks.</string>
    <string name="mystart_active_tasks">Active tasks:</string>
</resources>