<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent">
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_vertical"
	    android:orientation="vertical" >

		<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/target_scene"/>
		
		<RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/target_scene_session"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:textColor="@color/grey"
		        android:text="@string/target_scene_session"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/target_scene_timeline"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/grey"
		        android:text="@string/target_scene_timeline"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/target_scene_favorite"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/grey"
		        android:text="@string/target_scene_favorite"
		        android:onClick="onRadioButtonClicked"/>		    
		</RadioGroup>	    
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/send"/>
	    
	    <Button
	        android:id="@+id/send_text"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/send_text"/>
	    
	    <Button
	        android:id="@+id/send_img"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/send_img"/>
	    
	    <Button
	        android:id="@+id/send_music"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/send_music"/>
	    
	    <Button
	        android:id="@+id/send_video"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/send_video"/>
	    
	    <Button
	        android:id="@+id/send_webpage"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/send_webpage"/>

		<Button
			android:id="@+id/send_appbrand"
			android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/send_appbrand"/>
	    
	    <Button
	        android:id="@+id/send_appdata"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/send_appdata"/>
	    
	    <Button
	        android:id="@+id/send_emoji"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/send_emoji"/>
	        
	    <Button
	        android:id="@+id/get_token"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/get_token_from_weixin"/>
	    
	    <Button
	        android:id="@+id/unregister"
	        android:layout_margin="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:text="@string/unregister_from_weixin"/>
	    
	</LinearLayout>
</ScrollView>