<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_vertical"
	    android:orientation="vertical" >
        
		<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/receive"/>
	    
	    <Button
	        android:id="@+id/get_text"
	        android:layout_margin="10dp"
	        android:text="@string/share_text_to_weixin" />
	
	    <Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:id="@+id/get_img"
	        android:layout_margin="10dp"
	        android:text="@string/share_pic_to_weixin" />
	        
	    <Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:id="@+id/get_music"
	        android:layout_margin="10dp"
	        android:text="@string/share_music_to_weixin" />
	        
	    <Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:id="@+id/get_video"
	        android:layout_margin="10dp"
	        android:text="@string/share_video_to_weixin" />

	    <Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:id="@+id/get_webpage"
	        android:layout_margin="10dp"
	        android:text="@string/share_url_to_weixin" />
	
	    <Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:id="@+id/get_appdata"
	        android:layout_margin="10dp"
	        android:text="@string/share_appdata_to_weixin" />
	
	</LinearLayout>
</ScrollView>