<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	 	android:textSize="20dp"
        android:text="@string/enter"/>
    
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/reg_btn"
	    android:layout_margin="10dp"
        android:text="@string/reg"/>
    
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/goto_send_btn"
	    android:layout_margin="10dp"
        android:text="@string/goto_send"/>
    
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/launch_wx_btn"
	    android:layout_margin="10dp"
        android:text="@string/launch_wx"/>
    
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/check_timeline_supported_btn"
        android:layout_margin="10dp"
        android:text="@string/check_timeline_supported"/>
    
    <Button
        android:id="@+id/scan_qrcode_login_btn"
        android:layout_margin="10dp"
        android:text="@string/scan_qrcode_login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</LinearLayout>